# Interpreter

./: .gitignore  CMakeLists.txt  README.md  example.pas  main.cpp  parser.y  scanner.l  virt_machine.cpp  virt_machine.hpp
